<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Swym</string>
    <string name="action_settings">Settings</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="closeButtonText">Close</string>
    <string name="saveButtonText">Save</string>
    <string name="deleteButtonText">Delete</string>
    <string name="Purchase">Purchase</string>
    <string name="Source">Source</string>
    <string name="WithdrawalSourceHint">Sandwich, Beer</string>
    <string name="DepositSourceHint">Paycheck</string>
    <string name="Cost">Amount</string>
    <string name="Date">Date:</string>
    <string name="DollarSign">$</string>
    <string name="WithdrawalAmountHint">20.00</string>
    <string name="DepositAmountHint">923.43</string>
    <string name="Tag">Tag</string>
    <string name="Description">Description</string>
    <string name="WithdrawalDescriptionHint">From the deli. Paid for Tyler too.</string>
    <string name="DepositDescriptionHint">Worked overtime</string>
    <string name="title_section1">Budget</string>
    <string name="title_section2">Transactions</string>
    <string name="title_section3">Data</string>
    <string name="title_activity_withdrawal">Add Purchase</string>
    <string name="title_activity_deposit">Add Income</string>
    <string name="title_activity_set_budget">Set Budget</string>
    <string name="budgExpl">Please enter your monthly budget.</string>
    <string name="title_activity_view_transaction">Transaction</string>
    <string name="funds_toast">You must enter a Source, Amount, and Date</string>
    <string name="purchase_toast">Purchase and Amount cannot be empty</string>
    <string name="remaining_budget">Remaining Budget</string>
    <string name="current_balance">Current Balance</string>
    <string name="delete_prompt">Are you sure you want to delete this transaction?</string>
    <string name="delete_confirm">Confirm Deletion</string>
    <string name="set_budget_info">You can change your budget at any time in the settings menu.</string>
    <string name="zero_dollars">$0.00</string>
    <string name="choose_date">Choose Date</string>
    <string name="today">Today</string>
</resources>
