<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/budgetFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.swym.app.views.main.MainActivity"
    tools:ignore="MergeRootFrame">

    <TextView
        android:id="@+id/budgetlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/remaining_budget"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/budgetshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/zero_dollars"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/balancelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/current_balance"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/balanceshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/zero_dollars"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/addPurchase"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/title_activity_withdrawal" />

        <Button
            android:id="@+id/addFunds"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/title_activity_deposit" />

    </LinearLayout>
</LinearLayout>
