<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".popups.AddWithdrawalActivity"
    tools:ignore="MergeRootFrame">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Source"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/source_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/DepositSourceHint" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cost"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/money_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/DollarSign"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/amount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="true"
                    android:ems="10"
                    android:hint="@string/DepositAmountHint"
                    android:inputType="numberDecimal"
                    android:paddingTop="@dimen/activity_vertical_margin" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/Date"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/deposit_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/textView1"
                    android:layout_toLeftOf="@+id/pick_date_button"
                    android:layout_toRightOf="@+id/textView1"
                    android:layout_toStartOf="@+id/pick_date_button"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/pick_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:text="@string/choose_date"
                    android:textColor="@android:color/darker_gray" />
            </RelativeLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/Description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/description_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/DepositDescriptionHint"
                android:inputType="textMultiLine" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:divider="#8f8f8f"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight=".5"
                android:text="@string/cancelButtonText" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/saveButtonText" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
