<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swym.app.views.ViewTransactionActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentTop="true">

            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_section2"
                android:id="@+id/viewType" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/DollarSign"
                android:id="@+id/viewName" />

            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Cost"
                android:id="@+id/viewValType" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/DollarSign"
                android:id="@+id/viewValue" />


            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Description"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/viewDescription"
                android:text="$" />

            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Date"
                android:id="@+id/textView4" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/viewRealDate"
                android:text="$" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:divider="#8f8f8f">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/cancelButtonText"
                android:id="@+id/closeButton"
                android:layout_gravity="bottom"
                android:layout_weight=".5"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/deleteButtonText"
                android:id="@+id/deleteButton"
                android:layout_weight=".5" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
